fix: implement legible font sizes >= 16px

--- a/css/home.css
+++ b/css/home.css
@@ -9,7 +9,6 @@ main > section:nth-of-type(2) > div:first-of-type {
 main > section:nth-of-type(2) > div:first-of-type h2 {
   width: 100%;
   color: white;
-  font-size: 1rem;
   font-weight: normal;
   margin: 10px 10px 0;
 }
@@ -18,7 +17,6 @@ main > section:nth-of-type(2) > div:first-of-type select {
   height: 1.75rem;
   background-color: white;
   border: 1px solid #fff;
-  font-size: .9rem;
   letter-spacing: 0;
   margin: 10px;
 }
@@ -50,7 +48,6 @@ main > section:nth-of-type(2) > div:first-of-type select {
 
 #restaurants-list li h1 {
   color: #f18200;
-  font-size: 14pt;
   font-weight: 200;
   letter-spacing: 0;
   line-height: 1.3;
@@ -60,7 +57,6 @@ main > section:nth-of-type(2) > div:first-of-type select {
 
 #restaurants-list p {
   margin: 0;
-  font-size: 11pt;
 }
 
 #restaurants-list li a {
@@ -68,7 +64,6 @@ main > section:nth-of-type(2) > div:first-of-type select {
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
-  font-size: 10pt;
   margin: 15px 0 0;
   padding: 8px 30px 10px;
   text-align: center;
