--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@
 }
 
 html {
-  font-size: 12pt;
+  font-size: 16px;
 	font-family: Arial, Helvetica, sans-serif;
 	color: #333;
 	line-height: 1.5;
@@ -39,7 +39,6 @@ main {
 footer {
   background-color: #444;
   color: #aaa;
-  font-size: .7rem;
   letter-spacing: 1px;
   padding: 25px;
   text-align: center;
@@ -72,14 +71,19 @@ nav h1 a {
   background-color: #ccc;
 }
 
+@media only screen and (min-width: 376px) {
+  nav h1 a {
+    font-size: 2rem;
+  }
+
 @media only screen and (min-width: 768px) {
   nav h1 a {
     font-size: 3rem;
   }  
 }
 
-@media only screen and (min-width: 1366px) {
+@media only screen and (min-width: 1024px) {
   nav h1 a {
-    font-size: 3.5rem;
-  }
+    font-size: 4rem;
+  }  
 }
