--- a/css/restaurant.css
+++ b/css/restaurant.css
@@ -8,7 +8,6 @@ main {
   padding: 1rem;
   list-style: none;
   background-color: #eee;
-  font-size: 17px;
   margin: 0;
   width: 100%;
 }
